[project]
name = "judge-client"
version = "2.2.2"
description = "Client for Trojsten Judge API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4,<3",
    "requests (>=2.32.3,<3.0.0)",
]

[project.optional-dependencies]
actions = [
    "deepmerge>=2.0",
    "input-tool>=2.0.2",
    "loguru>=0.7.3",
]

[tool.uv.sources]
input-tool = { git = "https://github.com/fezjo/input-tool", branch = "master" }
